--- a/GUI/axisSidePanel/pcb_producer.ui
+++ b/GUI/axisSidePanel/pcb_producer.ui
@@ -97,7 +97,11 @@
               </packing>
             </child>
             <child>
-              <placeholder/>
+              <object class="HAL_Button" id="boton_probing_emul">
+                <property name="label" translatable="yes">Simular toque</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+              </object>
             </child>
             <child>
               <placeholder/>
